[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexmind"
version = "1.0.0"
description = "AI-powered local penetration testing assistant"
requires-python = ">=3.11"
dependencies = [
    "typer==0.12.3",
    "rich==13.7.1",
    "sqlalchemy==2.0.30",
    "httpx==0.27.0",
    "jinja2==3.1.4",
    "weasyprint==62.3",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "xmltodict==0.13.0",
    "python-dotenv==1.0.1",
]

[project.scripts]
hexmind = "hexmind.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["hexmind*"]
