[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexmind"
version = "0.1.0"
description = "AI-powered local penetration testing assistant"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
]
dependencies = [
    "typer==0.12.5",
    "click==8.1.7",
    "rich==13.7.1",
    "sqlalchemy==2.0.30",
    "httpx==0.27.0",
    "jinja2==3.1.4",
    "weasyprint==62.3",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "xmltodict==0.13.0",
    "python-dotenv==1.0.1",
]

[project.scripts]
hexmind = "hexmind.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["hexmind*"]
