[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "hexmind"
version         = "0.1.0"
description     = "AI-powered local penetration testing assistant — fully local, zero cloud"
readme          = "README.md"
requires-python = ">=3.11"
license         = {text = "MIT"}
authors         = [
    {name = "scorpiocodex", email = "212041449+scorpiocodex@users.noreply.github.com"}
]
keywords = [
    "pentesting", "security", "ai", "ollama", "nmap",
    "vulnerability-scanner", "cli", "recon", "cybersecurity"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "typer==0.12.5",
    "click==8.1.7",
    "rich==13.7.1",
    "sqlalchemy==2.0.30",
    "httpx==0.27.0",
    "jinja2==3.1.4",
    "weasyprint==62.3",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "xmltodict==0.13.0",
    "python-dotenv==1.0.1",
]

[project.urls]
Homepage      = "https://github.com/scorpiocodex/hexmind"
Repository    = "https://github.com/scorpiocodex/hexmind"
"Bug Tracker" = "https://github.com/scorpiocodex/hexmind/issues"
Changelog     = "https://github.com/scorpiocodex/hexmind/releases"

[project.scripts]
hexmind = "hexmind.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hexmind*"]
