[metadata]
name             = hexmind
version          = 0.2.0
description      = AI-powered local penetration testing assistant — fully local, zero cloud
long_description = file: README.md
long_description_content_type = text/markdown
author           = scorpiocodex
author_email     = 212041449+scorpiocodex@users.noreply.github.com
url              = https://github.com/scorpiocodex/hexmind
license          = MIT
classifiers      =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Topic :: Security

[options]
packages         = find:
python_requires  = >=3.11
install_requires =
    typer==0.12.5
    click==8.1.7
    rich==13.7.1
    sqlalchemy==2.0.30
    httpx==0.27.0
    jinja2==3.1.4
    weasyprint==62.3
    pydantic==2.7.1
    pydantic-settings==2.2.1
    xmltodict==0.13.0
    python-dotenv==1.0.1

[options.entry_points]
console_scripts =
    hexmind = hexmind.cli:app

[options.packages.find]
include = hexmind*

[options.package_data]
hexmind =
    data/wordlists/*.txt
    reports/templates/*.html
    reports/templates/*.md
    reports/templates/*.json
